# MMAudioDeviceTests

./: CMakeLists.txt  ChangeExclusiveModeRegistry.cpp  ChangeRegistry.cpp  PlayExclusiveStream.cpp  PrintEndpointInfo.cpp  README.md  RecordExclusiveStream.cpp  SetupAPIInfo.cpp
audio/: MyAudioSink.cpp  MyAudioSink.h  MyAudioSource.cpp  MyAudioSource.h  Utils.cpp  Utils.h
